styling fix for tooltip causing overflow

--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -9,6 +9,7 @@ body {
     background-color: #2F455C;
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 .home {
